# text-for-VUP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXAMPLE_CHARACTERS.md  LICENSE  README.md  camera.py  config.bat  config_editor.py  default.json  main.py  profile.py  pyproject.toml  renderer.py  requirements.txt  run.bat  state_mapper.py  tracker.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
profiles/: default.json  vup.json
tools/: generate_screenshot.py
