[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "text-for-vup"
version = "0.1.0"
description = "Lightweight V‑tuber puppet tool driven by webcam face/hand tracking with ASCII art"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/mouse114514/text-for-VUP"
Repository = "https://github.com/mouse114514/text-for-VUP"

[tool.setuptools.packages.find]
include = ["text_for_vup*"]
